--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-Material do minicurso de Visualização de Dados da 27ª Semana da Informática da UFV
+## Material do minicurso de Visualização de Dados da 27ª Semana da Informática da UFV
 
-Autor: Vinícius Paiva
-Contato: vinicius.d.paiva@ufv.br
+#### Autor: Vinícius Paiva
+#### Contato: vinicius.d.paiva@ufv.br
 
-Slides: https://docs.google.com/presentation/d/1y7aV8nSkXgcMpEC5Gz6zGtwi69soW_Q76NfYKskIiy0/edit?usp=sharing
+Slides: [Link](https://docs.google.com/presentation/d/1y7aV8nSkXgcMpEC5Gz6zGtwi69soW_Q76NfYKskIiy0/edit?usp=sharing)
 
-Notebook: https://colab.research.google.com/drive/1Z2ywkyGbU89VxukdDDil9jJ1uDVg0vzM?usp=sharing
+Notebook: [Link](https://colab.research.google.com/drive/1Z2ywkyGbU89VxukdDDil9jJ1uDVg0vzM?usp=sharing)
 
-Dataset: https://www.kaggle.com/datasets/evangower/fifa-world-cup
+Dataset: [Link](https://www.kaggle.com/datasets/evangower/fifa-world-cup)
