--- a/README
+++ b/README
@@ -8,3 +8,5 @@ Slides: [Link](https://docs.google.com/presentation/d/1y7aV8nSkXgcMpEC5Gz6zGtwi6
 Notebook: [Link](https://colab.research.google.com/drive/1Z2ywkyGbU89VxukdDDil9jJ1uDVg0vzM?usp=sharing)
 
 Dataset: [Link](https://www.kaggle.com/datasets/evangower/fifa-world-cup)
+
+[I'm an inline-style link](https://www.google.com)
