--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ## Material do minicurso de Visualização de Dados da 27ª Semana da Informática da UFV
 
-#### Autor: Vinícius Paiva
+#### Autor: Vinícius Paivaa
 #### Contato: vinicius.d.paiva@ufv.br
 
 Slides: [Link](https://docs.google.com/presentation/d/1y7aV8nSkXgcMpEC5Gz6zGtwi69soW_Q76NfYKskIiy0/edit?usp=sharing)
