--- a/README
+++ b/README
@@ -1,12 +1,7 @@
 ## Material do minicurso de Visualização de Dados da 27ª Semana da Informática da UFV
 
-#### Autor: Vinícius Paivaa
+#### Autor: Vinícius Paiva
 #### Contato: vinicius.d.paiva@ufv.br
 
-Slides: [Link](https://docs.google.com/presentation/d/1y7aV8nSkXgcMpEC5Gz6zGtwi69soW_Q76NfYKskIiy0/edit?usp=sharing)
-
-Notebook: [Link](https://colab.research.google.com/drive/1Z2ywkyGbU89VxukdDDil9jJ1uDVg0vzM?usp=sharing)
-
-Dataset: [Link](https://www.kaggle.com/datasets/evangower/fifa-world-cup)
 
 [I'm an inline-style link](https://www.google.com)
