--- a/README
+++ b/README
@@ -1,7 +1,6 @@
-## Material do minicurso de Visualização de Dados da 27ª Semana da Informática da UFV
+Material do minicurso de Visualização de Dados da 27ª Semana da Informática da UFV
 
-#### Autor: Vinícius Paiva
-#### Contato: vinicius.d.paiva@ufv.br
-
+Autor: Vinícius Paiva
+Contato: vinicius.d.paiva@ufv.br
 
 [I'm an inline-style link](https://www.google.com)
