--- a/README
+++ b/README
@@ -3,4 +3,9 @@ Material do minicurso de Visualização de Dados da 27ª Semana da Informática 
 Autor: Vinícius Paiva
 Contato: vinicius.d.paiva@ufv.br
 
-[I'm an inline-style link](https://www.google.com)
+
+Slides: https://docs.google.com/presentation/d/1y7aV8nSkXgcMpEC5Gz6zGtwi69soW_Q76NfYKskIiy0/edit?usp=sharing
+
+Notebook: https://colab.research.google.com/drive/1Z2ywkyGbU89VxukdDDil9jJ1uDVg0vzM?usp=sharing
+
+Dataset: https://www.kaggle.com/datasets/evangower/fifa-world-cup
